update intro (unfinished)

--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -32,5 +32,26 @@ author_profile: true
   {% endfor %}
 {% endif %}
 
+* **Amortized Active Learning for Nonparametric Functions.**\
+**Cen-You Li**, Marc Toussaint, Barbara Rakitsch, Christoph Zimmer.\
+ECML-PKDD Workshop: Interactive Adaptive Learning 2024\
+[arXiv](https://arxiv.org/abs/2407.17992)
 
+* **Global Safe Sequential Learning via Efficient Knowledge Transfer.**\
+**Cen-You Li**, Olaf Duennbier, Marc Toussaint, Barbara Rakitsch, Christoph Zimmer.\
+[arXiv](https://arxiv.org/abs/2402.14402) [code](https://github.com/boschresearch/TransferSafeSequentialLearning)
 
+* **Learning how to safely explore dynamic systems.**\
+Christoph Zimmer, **Cen-You Li**, Mark Schillinger, Mona Meister, Barbara Rakitsch, Duy Nguyen-Tuong.\
+ICML Workshop: Adaptive Experimental Design and Active Learning in the Real World 2022.\
+[pdf](https://realworldml.github.io/files/cr/paper17.pdf)
+
+* **Safe Active Learning for Multi-Output Gaussian Processes.**\
+**Cen-You Li**, Barbara Rakitsch, Christoph Zimmer.\
+Artificial Intelligence and Statistics Conference (**AISTATS**) 2022\
+[Proceedings](https://proceedings.mlr.press/v151/li22d.html) [arXiv](https://arxiv.org/abs/2203.14849) [code](https://github.com/boschresearch/SALMOGP)
+
+* **Differential efficacy of genetically swapping gal4.**\
+Ying-Jun Chen, Hao-Hsin Chang, Shih-Han Lin, Tzi-Yang Lin, Ting-Han Wu, Hsin-Ju Lin, Nan-Fu Liou, Chi-Jen Yang, Yuh-Tarng Chen, Kai Hsiang Chang, **Cen-You Li**, and Ya-Hui Chou.\
+Journal of Neurogenetics 2019\
+[doi](https://doi.org/10.1080/01677063.2018.1564289)
