try html format

--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -12,31 +12,33 @@ author_profile: true
 {% include base_path %}
 
 
-
-* **Amortized Active Learning for Nonparametric Functions.**\
-**Cen-You Li**, Marc Toussaint, Barbara Rakitsch, Christoph Zimmer.\
-ECML-PKDD Workshop: Interactive Adaptive Learning 2024\
-[arXiv](https://arxiv.org/abs/2407.17992)
-
-* **Global Safe Sequential Learning via Efficient Knowledge Transfer.**\
-**Cen-You Li**, Olaf Duennbier, Marc Toussaint, Barbara Rakitsch, Christoph Zimmer.\
-[arXiv](https://arxiv.org/abs/2402.14402) [code](https://github.com/boschresearch/TransferSafeSequentialLearning)
-
-* **Learning how to safely explore dynamic systems.**\
-Christoph Zimmer, **Cen-You Li**, Mark Schillinger, Mona Meister, Barbara Rakitsch, Duy Nguyen-Tuong.\
-ICML Workshop: Adaptive Experimental Design and Active Learning in the Real World 2022.\
-[pdf](https://realworldml.github.io/files/cr/paper17.pdf)
-
-* **Safe Active Learning for Multi-Output Gaussian Processes.**\
-**Cen-You Li**, Barbara Rakitsch, Christoph Zimmer.\
-Artificial Intelligence and Statistics Conference (**AISTATS**) 2022\
-[Proceedings](https://proceedings.mlr.press/v151/li22d.html) [arXiv](https://arxiv.org/abs/2203.14849) [code](https://github.com/boschresearch/SALMOGP)
-
-* **Differential efficacy of genetically swapping gal4.**\
-Ying-Jun Chen, Hao-Hsin Chang, Shih-Han Lin, Tzi-Yang Lin, Ting-Han Wu, Hsin-Ju Lin, Nan-Fu Liou, Chi-Jen Yang, Yuh-Tarng Chen, Kai Hsiang Chang, **Cen-You Li**, and Ya-Hui Chou.\
-Journal of Neurogenetics 2019\
-[doi](https://doi.org/10.1080/01677063.2018.1564289)
-
+<ul>
+  <li> <strong>Amortized Active Learning for Nonparametric Functions.</strong>
+    <br/><br/> <strong>Cen-You Li</strong>, Marc Toussaint, Barbara Rakitsch, Christoph Zimmer.
+    <br/><br/> ECML-PKDD Workshop: Interactive Adaptive Learning 2024
+    <br/><br/> [<a href="https://arxiv.org/abs/2407.17992">arXiv</a>]
+  </li>
+  <li> <strong>Global Safe Sequential Learning via Efficient Knowledge Transfer.</strong>
+    <br/><br/> <strong>Cen-You Li</strong>, Olaf Duennbier, Marc Toussaint, Barbara Rakitsch, Christoph Zimmer.
+    <br/><br/> 
+    <br/><br/> [<a href="https://arxiv.org/abs/2402.14402">arXiv</a>] [<a href="https://github.com/boschresearch/TransferSafeSequentialLearning">code</a>]
+  </li>
+  <li> <strong>Learning how to safely explore dynamic systems.</strong>
+    <br/><br/> Christoph Zimmer, <strong>Cen-You Li</strong>, Mark Schillinger, Mona Meister, Barbara Rakitsch, Duy Nguyen-Tuong.
+    <br/><br/> ICML Workshop: Adaptive Experimental Design and Active Learning in the Real World 2022.
+    <br/><br/> [<a href="https://realworldml.github.io/files/cr/paper17.pdf">pdf</a>]
+  </li>
+  <li> <strong>Safe Active Learning for Multi-Output Gaussian Processes.</strong>
+    <br/><br/> <strong>Cen-You Li</strong>, Barbara Rakitsch, Christoph Zimmer.
+    <br/><br/> Artificial Intelligence and Statistics Conference (<strong>AISTATS</strong>) 2022
+    <br/><br/> [<a href="https://proceedings.mlr.press/v151/li22d.html">Proceedings</a>] [<a href="https://arxiv.org/abs/2203.14849">arXiv</a>] [<a href="https://github.com/boschresearch/SALMOGP">code</a>]
+  </li>
+  <li> <strong>Differential efficacy of genetically swapping gal4.</strong>
+    <br/><br/> Ying-Jun Chen, Hao-Hsin Chang, Shih-Han Lin, Tzi-Yang Lin, Ting-Han Wu, Hsin-Ju Lin, Nan-Fu Liou, Chi-Jen Yang, Yuh-Tarng Chen, Kai Hsiang Chang, <strong>Cen-You Li</strong>, and Ya-Hui Chou.
+    <br/><br/> Journal of Neurogenetics 2019
+    <br/><br/> [<a href="https://doi.org/10.1080/01677063.2018.1564289">doi</a>]
+  </li>
+</ul>
 
 
 <!-- New style rendering if publication categories are defined -->
