--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -14,29 +14,29 @@ author_profile: true
 
 <ul>
   <li> <strong>Amortized Active Learning for Nonparametric Functions.</strong>
-    <br/><br/> <strong>Cen-You Li</strong>, Marc Toussaint, Barbara Rakitsch, Christoph Zimmer.
-    <br/><br/> ECML-PKDD Workshop: Interactive Adaptive Learning 2024
-    <br/><br/> [<a href="https://arxiv.org/abs/2407.17992">arXiv</a>]
+    <br/> <strong>Cen-You Li</strong>, Marc Toussaint, Barbara Rakitsch, Christoph Zimmer.
+    <br/> ECML-PKDD Workshop: Interactive Adaptive Learning 2024
+    <br/> [<a href="https://arxiv.org/abs/2407.17992">arXiv</a>]
   </li>
   <li> <strong>Global Safe Sequential Learning via Efficient Knowledge Transfer.</strong>
-    <br/><br/> <strong>Cen-You Li</strong>, Olaf Duennbier, Marc Toussaint, Barbara Rakitsch, Christoph Zimmer.
-    <br/><br/> 
-    <br/><br/> [<a href="https://arxiv.org/abs/2402.14402">arXiv</a>] [<a href="https://github.com/boschresearch/TransferSafeSequentialLearning">code</a>]
+    <br/> <strong>Cen-You Li</strong>, Olaf Duennbier, Marc Toussaint, Barbara Rakitsch, Christoph Zimmer.
+    <br/> 
+    <br/> [<a href="https://arxiv.org/abs/2402.14402">arXiv</a>] [<a href="https://github.com/boschresearch/TransferSafeSequentialLearning">code</a>]
   </li>
   <li> <strong>Learning how to safely explore dynamic systems.</strong>
-    <br/><br/> Christoph Zimmer, <strong>Cen-You Li</strong>, Mark Schillinger, Mona Meister, Barbara Rakitsch, Duy Nguyen-Tuong.
-    <br/><br/> ICML Workshop: Adaptive Experimental Design and Active Learning in the Real World 2022.
-    <br/><br/> [<a href="https://realworldml.github.io/files/cr/paper17.pdf">pdf</a>]
+    <br/> Christoph Zimmer, <strong>Cen-You Li</strong>, Mark Schillinger, Mona Meister, Barbara Rakitsch, Duy Nguyen-Tuong.
+    <br/> ICML Workshop: Adaptive Experimental Design and Active Learning in the Real World 2022.
+    <br/> [<a href="https://realworldml.github.io/files/cr/paper17.pdf">pdf</a>]
   </li>
   <li> <strong>Safe Active Learning for Multi-Output Gaussian Processes.</strong>
-    <br/><br/> <strong>Cen-You Li</strong>, Barbara Rakitsch, Christoph Zimmer.
-    <br/><br/> Artificial Intelligence and Statistics Conference (<strong>AISTATS</strong>) 2022
-    <br/><br/> [<a href="https://proceedings.mlr.press/v151/li22d.html">Proceedings</a>] [<a href="https://arxiv.org/abs/2203.14849">arXiv</a>] [<a href="https://github.com/boschresearch/SALMOGP">code</a>]
+    <br/> <strong>Cen-You Li</strong>, Barbara Rakitsch, Christoph Zimmer.
+    <br/> Artificial Intelligence and Statistics Conference (<strong>AISTATS</strong>) 2022
+    <br/> [<a href="https://proceedings.mlr.press/v151/li22d.html">Proceedings</a>] [<a href="https://arxiv.org/abs/2203.14849">arXiv</a>] [<a href="https://github.com/boschresearch/SALMOGP">code</a>]
   </li>
   <li> <strong>Differential efficacy of genetically swapping gal4.</strong>
-    <br/><br/> Ying-Jun Chen, Hao-Hsin Chang, Shih-Han Lin, Tzi-Yang Lin, Ting-Han Wu, Hsin-Ju Lin, Nan-Fu Liou, Chi-Jen Yang, Yuh-Tarng Chen, Kai Hsiang Chang, <strong>Cen-You Li</strong>, and Ya-Hui Chou.
-    <br/><br/> Journal of Neurogenetics 2019
-    <br/><br/> [<a href="https://doi.org/10.1080/01677063.2018.1564289">doi</a>]
+    <br/> Ying-Jun Chen, Hao-Hsin Chang, Shih-Han Lin, Tzi-Yang Lin, Ting-Han Wu, Hsin-Ju Lin, Nan-Fu Liou, Chi-Jen Yang, Yuh-Tarng Chen, Kai Hsiang Chang, <strong>Cen-You Li</strong>, and Ya-Hui Chou.
+    <br/> Journal of Neurogenetics 2019
+    <br/> [<a href="https://doi.org/10.1080/01677063.2018.1564289">doi</a>]
   </li>
 </ul>
 
