add about me, minor formating

--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -5,9 +5,11 @@ permalink: /publications/
 author_profile: true
 ---
 
+<!--
 {% if site.author.googlescholar %}
   <div class="wordwrap">You can also find my articles on <a href="{{site.author.googlescholar}}">my Google Scholar profile</a>.</div>
 {% endif %}
+//-->
 
 {% include base_path %}
 
@@ -15,7 +17,7 @@ author_profile: true
 <ul>
   <li> <strong>Amortized Active Learning for Nonparametric Functions.</strong>
     <br/> <strong>Cen-You Li</strong>, Marc Toussaint, Barbara Rakitsch, Christoph Zimmer.
-    <br/> ECML-PKDD Workshop: Interactive Adaptive Learning 2024
+    <br/> ECML-PKDD Workshop: Interactive Adaptive Learning 2024.
     <br/> [<a href="https://arxiv.org/abs/2407.17992">arXiv</a>]
   </li>
   <li> <strong>Global Safe Sequential Learning via Efficient Knowledge Transfer.</strong>
@@ -30,18 +32,19 @@ author_profile: true
   </li>
   <li> <strong>Safe Active Learning for Multi-Output Gaussian Processes.</strong>
     <br/> <strong>Cen-You Li</strong>, Barbara Rakitsch, Christoph Zimmer.
-    <br/> Artificial Intelligence and Statistics Conference (<strong>AISTATS</strong>) 2022
+    <br/> Artificial Intelligence and Statistics Conference (<strong>AISTATS</strong>) 2022.
     <br/> [<a href="https://proceedings.mlr.press/v151/li22d.html">Proceedings</a>] [<a href="https://arxiv.org/abs/2203.14849">arXiv</a>] [<a href="https://github.com/boschresearch/SALMOGP">code</a>]
   </li>
   <li> <strong>Differential efficacy of genetically swapping gal4.</strong>
     <br/> Ying-Jun Chen, Hao-Hsin Chang, Shih-Han Lin, Tzi-Yang Lin, Ting-Han Wu, Hsin-Ju Lin, Nan-Fu Liou, Chi-Jen Yang, Yuh-Tarng Chen, Kai Hsiang Chang, <strong>Cen-You Li</strong>, and Ya-Hui Chou.
-    <br/> Journal of Neurogenetics 2019
+    <br/> Journal of Neurogenetics 2019.
     <br/> [<a href="https://doi.org/10.1080/01677063.2018.1564289">doi</a>]
   </li>
 </ul>
 
 
 <!-- New style rendering if publication categories are defined -->
+<!--
 {% if site.publication_category %}
   {% for category in site.publication_category  %}
     {% assign title_shown = false %}
@@ -61,5 +64,5 @@ author_profile: true
     {% include archive-single.html %}
   {% endfor %}
 {% endif %}
-
+//-->
 
