--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -18,27 +18,31 @@ author_profile: true
   <li> <strong>Amortized Active Learning for Nonparametric Functions.</strong>
     <br/> <strong>Cen-You Li</strong>, Marc Toussaint, Barbara Rakitsch, Christoph Zimmer.
     <br/> ECML-PKDD Workshop: Interactive Adaptive Learning 2024.
-    <br/> [<a href="https://arxiv.org/abs/2407.17992">arXiv</a>]
+    <br/> <a href="{{site.url}}/files/2024_ial_poster.pdf" class="btn btn">poster</a>
+    <a href="https://arxiv.org/abs/2407.17992" class="btn btn--inverse">arXiv</a>
   </li>
   <li> <strong>Global Safe Sequential Learning via Efficient Knowledge Transfer.</strong>
     <br/> <strong>Cen-You Li</strong>, Olaf Duennbier, Marc Toussaint, Barbara Rakitsch, Christoph Zimmer.
     <br/> 
-    <br/> [<a href="https://arxiv.org/abs/2402.14402">arXiv</a>] [<a href="https://github.com/boschresearch/TransferSafeSequentialLearning">code</a>]
+    <br/> <a href="https://arxiv.org/abs/2402.14402" class="btn btn--block">arXiv</a>
+    <a href="https://github.com/boschresearch/TransferSafeSequentialLearning" class="btn btn--light-outline">code</a>
   </li>
   <li> <strong>Learning how to safely explore dynamic systems.</strong>
     <br/> Christoph Zimmer, <strong>Cen-You Li</strong>, Mark Schillinger, Mona Meister, Barbara Rakitsch, Duy Nguyen-Tuong.
     <br/> ICML Workshop: Adaptive Experimental Design and Active Learning in the Real World 2022.
-    <br/> [<a href="https://realworldml.github.io/files/cr/paper17.pdf">pdf</a>]
+    <br/> <a href="https://realworldml.github.io/files/cr/paper17.pdf" class="btn btn--info">pdf</a>
   </li>
   <li> <strong>Safe Active Learning for Multi-Output Gaussian Processes.</strong>
     <br/> <strong>Cen-You Li</strong>, Barbara Rakitsch, Christoph Zimmer.
-    <br/> Artificial Intelligence and Statistics Conference (<strong>AISTATS</strong>) 2022.
-    <br/> [<a href="https://proceedings.mlr.press/v151/li22d.html">Proceedings</a>] [<a href="https://arxiv.org/abs/2203.14849">arXiv</a>] [<a href="https://github.com/boschresearch/SALMOGP">code</a>]
+    <br/> International Conference on Artificial Intelligence and Statistics (<strong>AISTATS</strong>) 2022.
+    <br/> <a href="https://proceedings.mlr.press/v151/li22d.html" class="btn btn--warning">HTML</a>
+    <a href="https://arxiv.org/abs/2203.14849" class="btn btn--success">arXiv</a>
+    <a href="https://github.com/boschresearch/SALMOGP" class="btn btn--danger">code</a>
   </li>
   <li> <strong>Differential efficacy of genetically swapping gal4.</strong>
     <br/> Ying-Jun Chen, Hao-Hsin Chang, Shih-Han Lin, Tzi-Yang Lin, Ting-Han Wu, Hsin-Ju Lin, Nan-Fu Liou, Chi-Jen Yang, Yuh-Tarng Chen, Kai Hsiang Chang, <strong>Cen-You Li</strong>, and Ya-Hui Chou.
     <br/> Journal of Neurogenetics 2019.
-    <br/> [<a href="https://doi.org/10.1080/01677063.2018.1564289">doi</a>]
+    <br/> <a href="https://doi.org/10.1080/01677063.2018.1564289" class="btn btn--disabled">doi</a>
   </li>
 </ul>
 
