--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -13,6 +13,7 @@ author_profile: true
 
 {% include base_path %}
 
+I am working on the buttons, weird styles might appear.
 
 <ul>
   <li> <strong>Amortized Active Learning for Nonparametric Functions.</strong>
