--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -19,8 +19,7 @@ I am working on the buttons, weird styles might appear.
   <li> <strong>Amortized Active Learning for Nonparametric Functions.</strong>
     <br/> <strong>Cen-You Li</strong>, Marc Toussaint, Barbara Rakitsch, Christoph Zimmer.
     <br/> ECML-PKDD Workshop: Interactive Adaptive Learning 2024.
-    <br/> <a href="{{site.url}}/files/2024_ial_poster.pdf" class="btn btn--inverse-thin">poster</a>
-    <a href="https://arxiv.org/abs/2407.17992" class="btn btn--inverse-thin">arXiv</a>
+    <br/> <a href="https://arxiv.org/abs/2407.17992" class="btn btn--inverse-thin">arXiv</a>
   </li>
   <li> <strong>Global Safe Sequential Learning via Efficient Knowledge Transfer.</strong>
     <br/> <strong>Cen-You Li</strong>, Olaf Duennbier, Marc Toussaint, Barbara Rakitsch, Christoph Zimmer.
