--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -23,7 +23,7 @@ I am re-programming this page, weird style might occur.
       </h2>
       <p>
         {% for author in post.author %}
-          {% if author == "__self__" %}<strong>{{page.author}}</strong>{% else %}{{author}}
+          {% if author == "__self__" %}<strong>{{site.author.name}}</strong>{% else %}{{author}}
           {% if forloop.last %}{% else %},{% endif %}
           {% endif %}
         {% endfor %}
@@ -36,11 +36,11 @@ I am re-programming this page, weird style might occur.
       {% endif %}
       </p>
       <p>
-      {% if post.html %}<a href="{{ post.html }}" class="btn btn--inverse-thin">HTML</a>{% endif %}
-      {% if post.doi %}<a href="{{ post.doi }}" class="btn btn--inverse-thin">DOI</a>{% endif %}
-      {% if post.arxiv %}<a href="{{ post.arxiv }}" class="btn btn--inverse-thin">ARXIV</a>{% endif %}
-      {% if post.pdf %}<a href="{{ post.pdf }}" class="btn btn--inverse-thin">PDF</a>{% endif %}
-      {% if post.code %}<a href="{{ post.code }}" class="btn btn--inverse-thin">code</a>{% endif %}
+      {% if post.html %}<a href="{{ post.html }}" class="btn btn--inverse-thin" style="text-decoration:none;">HTML</a>{% endif %}
+      {% if post.doi %}<a href="{{ post.doi }}" class="btn btn--inverse-thin" style="text-decoration:none;">DOI</a>{% endif %}
+      {% if post.arxiv %}<a href="{{ post.arxiv }}" class="btn btn--inverse-thin" style="text-decoration:none;">ARXIV</a>{% endif %}
+      {% if post.pdf %}<a href="{{ post.pdf }}" class="btn btn--inverse-thin" style="text-decoration:none;">PDF</a>{% endif %}
+      {% if post.code %}<a href="{{ post.code }}" class="btn btn--inverse-thin" style="text-decoration:none;">code</a>{% endif %}
       </p>
     </article>
   </div>
