--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -41,7 +41,7 @@ author_profile: true
         {% if post.code %}<a href="{{ post.code }}" class="btn btn--inverse-thin" style="text-decoration:none;">CODE</a>{% endif %}
         <!-- abstract content -->
         {% if post.abstract %}
-        <br/><div id="abstract" style="display:none;">{{ post.abstract }}</div>
+        <br/><div id="abstract" style="display:none;" remark-content = "text">{{ post.abstract }}</div>
         {% endif %}
       </p>
     </article>
