--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -14,7 +14,7 @@ author_profile: true
 {% include base_path %}
 
 {% for post in site.publications reversed %}
-  <div class="{{ include.type | default: "list" }}__item">
+  <div class="{{ include.type | default: 'list' }}__item">
     <article>
       <h3 itemprop="headline">
         <strong>{{ post.title }}</strong>
@@ -31,15 +31,33 @@ author_profile: true
         <em>{{ post.venue }}.</em> {{ post.date | default: "1900-01-01" | date: "%Y" }}.
         {% endif %}
         <br/>
+        <!-- abstract button -->
+        {% if post.abstract %}<a onclick="toggle('abstract-{{ post.title }}')" class="btn btn--inverse-thin" style="text-decoration:none;">ABS</a>{% endif %}
+        <!-- style="text-decoration:none;" switches off ref underline -->
         {% if post.html %}<a href="{{ post.html }}" class="btn btn--inverse-thin" style="text-decoration:none;">HTML</a>{% endif %}
         {% if post.doi %}<a href="{{ post.doi }}" class="btn btn--inverse-thin" style="text-decoration:none;">DOI</a>{% endif %}
         {% if post.arxiv %}<a href="{{ post.arxiv }}" class="btn btn--inverse-thin" style="text-decoration:none;">ARXIV</a>{% endif %}
         {% if post.pdf %}<a href="{{ post.pdf }}" class="btn btn--inverse-thin" style="text-decoration:none;">PDF</a>{% endif %}
         {% if post.code %}<a href="{{ post.code }}" class="btn btn--inverse-thin" style="text-decoration:none;">CODE</a>{% endif %}
+        <!-- abstract content -->
+        {% if post.abstract %}
+        <br/><div id="abstract-{{ post.title }}" class="page__toggle" style="display:none;">{{ post.abstract }}</div>
+        {% endif %}
       </p>
     </article>
   </div>
 {% endfor %}
+
+<script>
+function toggle(id) {
+  let x = document.getElementById(id);
+  if (x.style.display === "none") {
+    x.style.display = "block";
+  } else {
+    x.style.display = "none";
+  }
+}
+</script>
 
 
 
